Fix ET-8 z-index 100 on all ui-autocomplete and addVocabAutocomplete to related object relation type

--- a/registry/src/orca/_styles/add_registry_object.css
+++ b/registry/src/orca/_styles/add_registry_object.css
@@ -695,4 +695,4 @@ list-style-image: url(../_images/error_icon2.png);
 .relatedObject_result ul{height:300px;overflow:auto;border:1px solid black;padding:0;margin:0;}
 .relatedObject_result ul li a{display:block;list-style-type:none;padding:5px;text-decoration:none;border-bottom:1px solid #ccc;}
 .relatedObject_result ul li a:hover{text-decoration:none;color:white;background:#333;}
-}
+.ui-autocomplete{z-index: 1000 !important;}
